--- a/src/screens/diagnosis/selfassess.css
+++ b/src/screens/diagnosis/selfassess.css
@@ -7,11 +7,27 @@
 .main {
   width: 100%;
   height: 100%;
-  margin: 70px auto;
+  padding: 5px;
+  margin: 50px auto 10px;
 }
 button#exit__button {
+  position: fixed;
   color: red;
+  z-index: 10;
 }
 .start__warning {
-  margin: 10px;
+  margin-top: 10px;
+}
+.react-chatbot-kit-chat-container {
+  width: 90%;
+  margin: auto;
+}
+.react-chatbot-kit-chat-bot-message,
+.react-chatbot-kit-user-chat-message {
+  width: 70%;
+  margin: 0;
+}
+.react-chatbot-kit-user-chat-message {
+  background-color: grey;
+  color: beige;
 }
