--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,10 @@ body {
   margin-top: 1rem;
 }
 
+.react-chatbot-kit-chat-bot-message {
+  font-size: 1.5rem;
+}
+
 @media (max-width: 990px) {
   .app {
     flex-direction: column;
