--- a/src/screens/diagnosis/selfassess.css
+++ b/src/screens/diagnosis/selfassess.css
@@ -26,8 +26,10 @@ button#exit__button {
 .react-chatbot-kit-user-chat-message {
   width: 70%;
   margin: 0;
+  font-size: 1.2rem;
 }
 .react-chatbot-kit-user-chat-message {
   background-color: grey;
   color: beige;
+  font-size: 1.2rem;
 }
